--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,6 @@ cache:
         - $HOME/.composer/cache/files
 
 php:
-    - 5.5
     - 5.6
     - 7.0
     - hhvm
@@ -15,9 +14,9 @@ php:
 matrix:
     fast_finish: true
     include:
-        # Test against Symfony STABLE versions
+        # Test against Symfony stable versions
         - php: 5.6
-          env: SYMFONY_VERSION=3.0.*
+          env: SYMFONY_VERSION=3.*.*
         # Test against dev versions
         - php: 5.6
           env: DEPENDENCIES=dev
