--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "php": ">=5.5.9",
+        "php": "~5.6",
         "doctrine/orm": "~2.5",
         "symfony/config": "~3.0",
         "symfony/dependency-injection": "~3.0",
