--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ matrix:
     include:
         # Test against Symfony stable versions
         - php: 5.6
-          env: SYMFONY_VERSION=3.*.*
+          env: SYMFONY_VERSION=3.0.*
         # Test against dev versions
         - php: 5.6
           env: DEPENDENCIES=dev
