--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ cache:
         - $HOME/.composer/cache/files
 
 php:
+    - 5.5
     - 5.6
     - 7.0
     - hhvm
@@ -15,7 +16,9 @@ matrix:
     fast_finish: true
     include:
         # Test against Symfony stable versions
-        - php: 5.6
+        - php: 5.5
+          env: SYMFONY_VERSION=2.8.*
+        - php: 5.5
           env: SYMFONY_VERSION=3.0.*
         # Test against dev versions
         - php: 5.6
