--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,9 @@
     "name": "ivoaz/content-editable-bundle",
     "type": "symfony-bundle",
     "description": "This bundle provides a twig extension for editable content with internationalization support.",
-    "keywords": ["contenteditable"],
+    "keywords": [
+        "contenteditable"
+    ],
     "homepage": "https://github.com/ivoaz/content-editable-bundle",
     "license": "MIT",
     "authors": [
@@ -12,21 +14,23 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "doctrine/orm": "~2.5",
-        "symfony/config": "~3.0",
-        "symfony/dependency-injection": "~3.0",
-        "symfony/form": "~3.0",
-        "symfony/event-dispatcher": "~3.0",
-        "symfony/http-foundation": "~3.0",
-        "symfony/security": "~3.0",
-        "symfony/validator": "~3.0",
+        "php": ">=5.5",
+        "doctrine/orm": "~2.4",
+        "symfony/config": "~2.8|~3.0",
+        "symfony/dependency-injection": "~2.8|~3.0",
+        "symfony/form": "~2.8|~3.0",
+        "symfony/event-dispatcher": "~2.8|~3.0",
+        "symfony/http-foundation": "~2.8|~3.0",
+        "symfony/security": "~2.8|~3.0",
+        "symfony/validator": "~2.8|~3.0",
         "twig/twig": "~1.23"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.1"
+        "phpunit/phpunit": "~4.8|~5.0"
     },
     "autoload": {
-        "psr-4": { "Ivoaz\\Bundle\\ContentEditableBundle\\": "" }
+        "psr-4": {
+            "Ivoaz\\Bundle\\ContentEditableBundle\\": ""
+        }
     }
 }
