--- a/composer.json
+++ b/composer.json
@@ -15,22 +15,34 @@
     ],
     "require": {
         "php": ">=5.5",
-        "doctrine/orm": "~2.4",
         "symfony/config": "~2.8|~3.0",
         "symfony/dependency-injection": "~2.8|~3.0",
-        "symfony/form": "~2.8|~3.0",
         "symfony/event-dispatcher": "~2.8|~3.0",
+        "symfony/form": "~2.8|~3.0",
         "symfony/http-foundation": "~2.8|~3.0",
         "symfony/security": "~2.8|~3.0",
         "symfony/validator": "~2.8|~3.0",
         "twig/twig": "~1.23"
     },
     "require-dev": {
+        "doctrine/doctrine-bundle": "~1.6",
+        "doctrine/orm": "~2.3",
+        "doctrine/mongodb-odm-bundle": "~3.0@dev",
         "phpunit/phpunit": "~4.8|~5.0"
+    },
+    "suggests": {
+        "doctrine/doctrine-bundle": "To enable support for the ORM entities (~1.6)",
+        "doctrine/orm": "To enable support for the ORM entities (~2.3)",
+        "doctrine/mongodb-odm-bundle": "To enable support for the ODM documents (~3.0)"
     },
     "autoload": {
         "psr-4": {
             "Ivoaz\\Bundle\\ContentEditableBundle\\": ""
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
         }
     }
 }
