--- a/.travis.yml
+++ b/.travis.yml
@@ -12,24 +12,35 @@ php:
     - 7.0
     - hhvm
 
+env:
+    - SYMFONY_VERSION=2.8.*
+    - SYMFONY_VERSION=3.0.*
+    - DEPENDENCIES=dev
+    - DEPENDENCIES=lowest
+
 matrix:
     fast_finish: true
-    include:
-        # Test against Symfony stable versions
-        - php: 5.5
-          env: SYMFONY_VERSION=2.8.*
-        - php: 5.5
-          env: SYMFONY_VERSION=3.0.*
-        # Test against dev versions
-        - php: 5.6
-          env: DEPENDENCIES=dev
     allow_failures:
         - php: hhvm
         - env: DEPENDENCIES=dev
 
+before_install:
+    - if [ $(phpenv version-name) = "5.5" ];
+      then echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini;
+      fi
+    - if [ $(phpenv version-name) = "5.6" ];
+      then echo "extension = mongo.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini;
+      fi
+    - if [ $(phpenv version-name) = "7.0" ];
+      then echo "extension = mongodb.so" >> ~/.phpenv/versions/$(phpenv version-name)/etc/php.ini;
+      fi
+
 install:
+    - if [ "$DEPENDENCIES" = "lowest" ]; then COMPOSER_FLAGS="--prefer-stable --prefer-lowest"; fi;
     - if [ "$DEPENDENCIES" = "dev" ]; then perl -pi -e 's/^}$/,"minimum-stability":"dev"}/' composer.json; fi;
     - if [ "$SYMFONY_VERSION" != "" ]; then composer require "symfony/symfony:${SYMFONY_VERSION}" --no-update; fi;
+    - if [ $(phpenv version-name) = "7.0" ]; then COMPOSER_FLAGS="${COMPOSER_FLAGS} --ignore-platform-reqs"; fi;
+    - if [ $(phpenv version-name) = "hhvm" ]; then COMPOSER_FLAGS="${COMPOSER_FLAGS} --ignore-platform-reqs"; fi;
     - composer update $COMPOSER_FLAGS
 
-script: phpunit -v
+script: vendor/bin/phpunit -v
